# fastmlx

./: .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.rst  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml  update_changelog.py
.github/workflows/: deploy-docs.yml  tests.yml  update_changelog.yml
changelog/: changelog.md  index.html
cli_reference/: index.html
community_projects/: community_projects.md  index.html
contributing/: index.html
docs/: cli_reference.md  common.md  contributing.md  endpoints.md  fastmlx.md  index.md  installation.md  models.md  usage.md
docs/examples/: intro.ipynb
endpoints/: endpoints.md  index.html
examples/chatbot/: chatbot.md  index.html
examples/function_calling/: function_calling.md  index.html
fastmlx/: __init__.py  cli.py  common.py  fastmlx.py  utils.py
fastmlx/tools/: arcee_agent.j2  command-r-plus.j2  config.json  llama-3_1.j2  xlam.j2
fastmlx/types/: model.py
fastmlx/types/chat/: chat_completion.py
installation/: index.html  installation.md
models/: index.html
search/: search_index.json
tests/: __init__.py  test_fastmlx.py
usage/: index.html  usage.md
