[project]
name = "fastmlx"
version = "0.2.0"
dynamic = [
    "dependencies",
]
description = "FastMLX is a high performance production ready API to host MLX models."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "fastmlx",
    "MLX",
    "Apple MLX",
    "vision language models",
    "VLMs",
    "large language models",
    "LLMs",
]
license = {text = "Apache Software License 2.0"}
authors = [
  {name = "Prince Canuma", email = "prince.gdt@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
fastmlx = "fastmlx.fastmlx:run"

[project.optional-dependencies]
all = [
    "fastmlx[extra]",
]

extra = []


[tool]
[tool.setuptools.packages.find]
include = ["fastmlx*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "fastmlx/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/Blaizzy/fastmlx"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"